2002-02-26  Loren Rittle <ljrittle@acm.org>

	* include/Makefile.am (thread_target_headers): Unconditionally
	stage and install gthr-posix.h.
	(${target_builddir}/gthr-posix.h): New rule cloned off
	${target_builddir}/gthr-default.h.
	(${target_builddir}/gthr-default.h): Support chained inclusion
	of gthr support headers.
	* include/Makefile.in: Rebuilt.

2002-02-26  Paolo Carlini  <pcarlini@unitus.it>

	* include/bits/locale_facets.tcc (num_put::_M_widen_int):
	Group all the integral types, not only decs.
	* testsuite/27_io/ios_manip_basefield.cc (test01): Tweak existing
	tests, add a few more.

2002-02-25  Benjamin Kosnik  <bkoz@redhat.com>

	* src/ios.cc (ios_base::~ios_base): Tweak.
	(ios_base::_M_call_callbacks): Deal with null __p.
	(ios_base::ios_base): Set _M_callbacks.
	* include/bits/basic_ios.tcc (basic_ios::init): Adjust comment.
	* testsuite/27_io/ios_init.cc (test02): Fix.
	
	* mkcheck.in (static_fail): Failed links go to output file.

2002-02-25  Phil Edwards  <pme@gcc.gnu.org>

	* docs/html/faq/index.html:  Update.
	* docs/html/faq/index.txt:  Regenerate.

2002-02-22  Phil Edwards  <pme@gcc.gnu.org>

	* acinclude.m4 (GLIBCPP_ENABLE_SYMVERS):  Fix comment.
	* aclocal.m4:  Regenerate.
	* docs/html/configopts.html:  Document --enable-symvers.
	* config/linker-map.gnu:  Break libsupc++ symbols out to their own tag.

2002-02-22  Philipp Thomas  <pthomas@suse.de>

        * include/backward/tempbuf.h: get_temporary_buffer and
        return_temporary_buffer are in namespace std, not in __gnu_cxx.

2002-02-21  Benjamin Kosnik  <bkoz@redhat.com>

	* configure.in (target_alias): Default to yes.
	* acinclude.m4 (GLIBCPP_ENABLE_SYMVERS): Add check for shared
	libgcc to default case. 

2002-02-20  Phil Edwards  <pme@gcc.gnu.org>

	* acinclude.m4 (GLIBCPP_CHECK_LINKER_FEATURES):  Also check version.
	(GLIBCPP_ENABLE_SYMVERS):  Redo logic, use linker version.
	* configure.in (GLIBCPP_ENABLE_SYMVERS):  Move later in the script.
	* aclocal.m4:  Regenerate.